--- a/style.css
+++ b/style.css
@@ -34,7 +34,7 @@ main {
   background-repeat: no-repeat;
   height: 60vh;
   border-radius: 50px;
-  color: #fff;
+  color: rgb(77, 123, 160);
   cursor: pointer;
   flex: 0.5;
   margin: 10px;
