--- a/style.css
+++ b/style.css
@@ -82,7 +82,7 @@ main {
   left:20px; 
   width:40%; 
   float:left; 
-  font-size: 19px;
+  font-size: 21px;
   /*box-shadow: rgba(6, 24, 44, 0.4) 0px 0px 0px 2px, rgba(6, 24, 44, 0.65) 0px 4px 6px -1px, rgba(255, 255, 255, 0.08) 0px 1px 0px inset;*/
 }
 
@@ -120,6 +120,8 @@ main {
 
 #mostrar{
   display: none;
+  font-size: 16px;
+  justify-content: center;
 }
 
 #passar_mouse:hover #mostrar{
